awesant (0.9) released at 2013-04-19

    * Fixed: add_field does not work if format is set to json_event.

awesant (0.8) released at 2013-04-15

    * JSON output is now utf8.
    * Added a TZ hack for Perl 5.8.3 and POSIX 1.07.
      UTC at the end of the time string is replaced with Z.
    * Awesant is now continuously watching for new log files on all paths
      that contains a wildcard. If a new log file is created then the log
      file is added to the input automatically.
    * Improved the forking machine for the file input. In the past for each
      single file a process was forked if the parameter "workers" was set.
      Now only one process is forked to process all files from a single
      input configuration. The forked process is also watching for new
      log files. For file inputs max 1 worker is possible.
    * Added the new parameter "start_position" to Input/File.pm. With this
      parameter it's possible to set where to start to tail the logfile.
      Possible values are "begin" and "end". The file watcher of awesant
      sets this parameter to "begin" if a new file were found.
    * Added awesant-create-cert to create a cert bundle.
    * Fixed a bug with autoflush in File.pm for files to store the last
      byte position of logfiles.
    * Fixed add_field exception if a comma separated list is set.

awesant (0.7) released at 2013-02-03

    * Some readability improvements.
    * Added the debian specific directory with its control
      files to to build awesant for debian quickly.

awesant (0.6) released at 2013-01-05

    * Moved a comment some lines below
    * Fixed typos.
    * The last log file position is now written at the end of the pull request.
    * Improved the logging.
    * Added a timeout to accept() for IO::Socket.

awesant (0.5) released at 2012-12-06

    * Added a disconnect message to Output/Socket.pm.
    * Added some benchmarking options to Agent.pm.
    * Fixed "cat pidfile" in the init script.